--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,15 @@
 
 
 
-<form action="/feedback" method="post">
+<!-- <img src="/Travel/static/images/hol.jpg">  -->
+  <h1>Travel Planner</h1>
+  
+  <p>Plan your holidays with out amazing travel planner, to help you reach favourite destinations with ease...</p>
+
+  <br><br>
+
+  <h2> Leave your details below to get the lastest travel updates</h2>
+  <form action="/feedback" method="post">
 	<label for="name"> Name: </label>
 	<input type="text" name="name" id="name">
 		
@@ -12,10 +20,5 @@
 	<input type="submit" name="Send!">
 </form>
 
-
-  <h1>Travel Planner</h1>
-  <p>This app is to help you plan your holidays!
-  </p>
-  <img src="../static/images/sunshine.jpg" alt="Sun">
 </body>
 </html>
